# Tahr

./: .gitignore  CMakeLists.txt  README.md  build.sh
binary/: CMakeLists.txt  parser.c
binary/vmorph/: TODOLIST  build.sh  dijkstra_small_nodata.s  fib.mips  fibonacci.mips  fibonacci.vmorph  fibonacci2.mips  fix_reg_mips.py  hello.mips  input.mips  output.asm  pbmsrch_small.s  qsort_small-nodata.s  temp
binary/vmorph/dijkstra/: dijkstra_small.s  dijkstra_small_nodata.s  dijkstra_small_nodata_fixed.s  output.s
binary/vmorph/qsort/: output.asm  qsort_small-nodata.s  qsort_small-nodata_fixed.s  qsort_small.s
binary/vmorph/src/: CMakeLists.txt  ag_parser.c  limit.h  parse.l  parse.y  reduce.c  reduce.h  ruledef.h  tahr.c  tahr.h  util.c  utils.h
binary/vmorph/src/parser/: parse.l  parse.y
binary/vmorph/stringsearch/: out.vmorph  output.asm  pbmsrch_small.s  pbmsrch_small_fixed.s
binary/vmorph/transpiler/: CMakeLists.txt  trans.c
binary/x86/: CMakeLists.txt  basicmath_small_nodata.s  bench  benchmark  build.sh  cubic_nodata.s  cubic_nodata_fixed.s  dijkstra  dijkstra.s  dijkstra_small_nodata.s  fib  fib.S  fib2.s  fib3.s  fib4.s  fib5.s  fib_s  fib_s.s  fibonacci2.mips  fibonaccir.c  hint-mips-nodata.s  hint.s  hkernel-mips-nodata.s  hkernel.s  hmips.s  isqrt_nodata.s  isqrt_nodata_fixed.s  out_text  output  output.S  output.asm  output.s  qsort  qsort.s  qsort_small-nodata.s  rad2deg_nodata.s  rad2deg_nodata_fixed.s  test  test_file.S  test_file.c  (+2 more)
binary/x86/basicmath/: basicmath  basicmath.s  basicmath_small_nodata_fixed.s  cubic.s  cubic_nodata_fixed.s  isqrt.s  rad2deg.s  rad2deg_nodata_fixed.s
binary/x86/benchmark_compiler/: hint-mips-nodata.s  hint-mips.s  hkernel-mips-nodata.s  hkernel-mips.s
binary/x86/libc_test/: test  test.s
binary/x86/src/: CMakeLists.txt  ag_parser.c  ag_utils.h  bitmap.h  limit.h  reduce.c  reduce.h  stack.h  tahr.c  tahr.h  utils.h
binary/x86/src/error/: error.c  error.h
binary/x86/src/parser/: parse.l  parse.y
binary/x86/stringsearch/: bmhasrch.s  bmhasrch_fixed.s  bmhisrch.s  bmhisrch_fixed.s  bmhsrch.s  bmhsrch_fixed.s  pbmsrch_small.s  pbmsrch_small_fixed.s
binary/x86/stringsearch/output/: a.out  bmhasrch.s  bmhisrch.s  bmhsrch.s  pbmsrch_small.s  stringsearch  strsearch
binary/x86/transpiler/: trans.c
icon/: set_mime.sh
icon/eza/: set_icon.sh  theme.yml
src/: CMakeLists.txt  Makefile  bfg.tab.c  bfg.tab.h  bfg.yylex.c  cmake_install.cmake  lex.yy.h
src/error/: error.c  error.h
src/internal/: ag_parser.c  ag_parser.h  attributes.c  attributes.h  gen_code.c  gen_code.h  gen_parse.c  gen_parse.h  grow.c  n_symbols.c  n_symbols.h  rules.c  rules.h  symbols.c  symbols.h
src/internal/debug/: debug.c  debug.h
src/internal/output_files/: ag_parser.c  ag_parser.h  ag_utils.c  grow.c  grow.h  limit.h  rule_template.c  rulefunc.c  stack.c  stack.h  util.c  util.h
src/internal/resources/: template.l  template.y
src/parser/: Makefile  bfg  bfg.l  bfg.y  error.h  limit.h  main.c  parser.c  parser.h  prova.bfg
src/utils/: arch.h
src/utils/list/: list.c  list.h
tahr_src/: x86.tahr
tahr_src/vmorph/: README.md  mipstovm.tahr  vmorph.tahr
tahr_src/x86/: README.md  fpmipstox86.tahr  mips2.tahr  mipsfp.tahr  mipstox86.tahr  x86.tahr  x86fp.tahr
